on focus test overlap issue and cut out issue fixed

--- a/ui.frontend/src/main/webpack/components/content/core-text/v1/text/style.scss
+++ b/ui.frontend/src/main/webpack/components/content/core-text/v1/text/style.scss
@@ -85,11 +85,12 @@
    
 }
 
-p:last-of-type:has(
-.sl-link-internal, 
-.sl-link-external, 
-.sl-link-pdf) a{
-    display:block;
+a.sl-link {
+    &:focus-visible{
+        margin:0;
+        padding: 0 .2rem;
+        display: block;
+    }
 }
 
 .popover-button {
